--- a/templates/doctor/services.html
+++ b/templates/doctor/services.html
@@ -374,44 +374,10 @@
 						<span class="or">OR</span>
 					</div>
 
-					<!-- form of appointment -->
 					<div class="row">
-						<form method="post" action="#">
-							<div class="form">
-								<div
-									class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-									<input class="form-control" type="text" placeholder="Full Name *" required>
-								</div>
-								<div
-									class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-									<input class="form-control" type="text" placeholder="Email Address *" required>
-								</div>
-								<div
-									class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-									<input class="form-control" type="text" placeholder="Appointment Date *" required>
-								</div>
-								<div
-									class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-									<input class="form-control" type="text" placeholder="Mobile Number *" required>
-								</div>
-							</div>
-							<div
-								class="input-group margin-bottom-sm col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-								<textarea class="form-control" rows="6" placeholder="Your Problem *"
-									required></textarea>
-							</div>
-							<div class="col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1">
-								<!-- <div class="captcha-container">
-		                                    <label>Are you human? </label><br/>
-		                                    <img src="http://inspirythemesdemo.com/healthpress/wp-content/themes/healthpress-theme/captcha/captcha.php" alt="">
-		                                    <input type="text" class="captcha required" name="captcha" maxlength="5" title=" Please enter the code characters displayed in image!">
-		                                </div> -->
-								<input class="btn btn-primary send" type="submit" value="Send">
-							</div>
-						</form>
+						{% include 'doctor/snippits/form.html' %}
 					</div>
-					<!-- end of form -->
-				</div><!-- end of appointment-->
+				</div>
 			</div>
 		</div>
 	</div>
