Updated: Formatted files

--- a/web/templates/doctor/faq.html
+++ b/web/templates/doctor/faq.html
@@ -1,93 +1,96 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-
-
-<section class="faq-title text-center">
-	<div class="faq-wrapper">
-		<div class="container">
-			<div class="row">
-				<h1 class="headline">Frequently Asked Questions</h1>
-			</div>
-			<div class="row">
-				<div class="sub-headline">
-					<p>Small Description</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="faq-content">
-	<div class="container">
-		<div class="row">
-			<main class="col-md-9">
-				<div class="faq-header">Things you need to know...</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Could my cell phone kill me?</div>
-					<div class="faq-a">
-						<p>Short Description about Could my cell phone kill me?</p>
-					</div>
-				</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Should I really be taking four times the recommended
-						daily dose? </div>
-					<div class="faq-a">
-						<p>Short Description about Should I really be taking four times the recommended daily dose?</p>
-					</div>
-				</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>What happens if Pinocchio says, "my nose will grow
-						now"</div>
-					<div class="faq-a">
-						<p>Description ... </p>
-					</div>
-				</div>
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Could my cell phone kill me?</div>
-					<div class="faq-a">
-						<p>Description about Could my cell phone kill me?</p>
-					</div>
-				</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Should I really be taking four times the recommended
-						daily dose? </div>
-					<div class="faq-a">
-						<p>Description about Should I really be taking four times the recommended daily dose?</p>
-					</div>
-				</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>What happens if Pinocchio says, "my nose will grow
-						now"</div>
-					<div class="faq-a">
-						<p>Describe this...</p>
-					</div>
-				</div>
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Could my cell phone kill me?</div>
-					<div class="faq-a">
-						<p>Description about Could my cell phone kill me?</p>
-					</div>
-				</div>
-
-				<div class="faq-c">
-					<div class="faq-q"><span class="faq-t">+</span>Should I really be taking four times the recommended
-						daily dose? </div>
-					<div class="faq-a">
-						<p>Description about Should I really be taking four times the recommended daily dose?</p>
-					</div>
-				</div>
-
-
-			</main>
-		</div>
-	</div>
-</section>
-
+  <section class="faq-title text-center">
+    <div class="faq-wrapper">
+      <div class="container">
+        <div class="row">
+          <h1 class="headline">Frequently Asked Questions</h1>
+        </div>
+        <div class="row">
+          <div class="sub-headline">
+            <p>Small Description</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="faq-content">
+    <div class="container">
+      <div class="row">
+        <main class="col-md-9">
+          <div class="faq-header">Things you need to know...</div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Could my cell phone kill me?
+            </div>
+            <div class="faq-a">
+              <p>Short Description about Could my cell phone kill me?</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Should I really be taking four times the recommended
+              daily dose?
+            </div>
+            <div class="faq-a">
+              <p>Short Description about Should I really be taking four times the recommended daily dose?</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>What happens if Pinocchio says, "my nose will grow
+              now"
+            </div>
+            <div class="faq-a">
+              <p>Description ...</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Could my cell phone kill me?
+            </div>
+            <div class="faq-a">
+              <p>Description about Could my cell phone kill me?</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Should I really be taking four times the recommended
+              daily dose?
+            </div>
+            <div class="faq-a">
+              <p>Description about Should I really be taking four times the recommended daily dose?</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>What happens if Pinocchio says, "my nose will grow
+              now"
+            </div>
+            <div class="faq-a">
+              <p>Describe this...</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Could my cell phone kill me?
+            </div>
+            <div class="faq-a">
+              <p>Description about Could my cell phone kill me?</p>
+            </div>
+          </div>
+          <div class="faq-c">
+            <div class="faq-q">
+              <span class="faq-t">+</span>Should I really be taking four times the recommended
+              daily dose?
+            </div>
+            <div class="faq-a">
+              <p>Description about Should I really be taking four times the recommended daily dose?</p>
+            </div>
+          </div>
+        </main>
+      </div>
+    </div>
+  </section>
 {% endblock %}
