--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
 {% load static %}
-
 <html>
-
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" type="img/ico" href="{% static 'favicon/favicon.ico' %}"/>
-
-	<title>HealthCare</title>	
-	{% include 'css/index.html' %}
-
-</head>
-
-{% include 'components/navbar.html' %}
-
-<body>
-	{% block content %}
-
-	{% endblock %}
-
-	{% include 'components/footer.html' %}
-
-</body>
-	{% include 'js/index.html' %}
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon"
+          type="img/ico"
+          href="{% static 'favicon/favicon.ico' %}" />
+    <title>HealthCare</title>
+    {% include 'css/index.html' %}
+  </head>
+  {% include 'components/navbar.html' %}
+  <body>
+    {% block content %}{% endblock %}
+    {% include 'components/footer.html' %}
+  </body>
+  {% include 'js/index.html' %}
 </html>
