--- a/web/templates/doctor/blog.html
+++ b/web/templates/doctor/blog.html
@@ -1,160 +1,181 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
-
-<section class="blog-title text-center">
-	<div class="blog-wrapper">
-		<div class="container">
-			<div class="row">
-				<h1 class="headline">Our Blog</h1>
-			</div>
-			<div class="row">
-				<div class="sub-headline">
-					<p>Full of important information</p>
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<section class="blog-content">
-	<div class="container">
-		<div class="row">
-			<main class="blog1col col-md-9">
-				<div class="archive">
-					<article class="row">
-
-						<div class="col-md-4 col-sm-4">
-							<img src="{% static '/img/blog1.jpg' %}"
-								class="img-responsive center-block img-padder" alt="">
-						</div>
-
-						<div class="col-md-8 col-sm-8">
-							<h4>
-								<a href="/">
-									Caption
-								</a>
-							</h4>
-							<ul class="list-inline info">
-								<li><i class="fa fa-user-md"></i> Marco Nardi</li>
-								<li><i class="fa fa-calendar"></i> March 17, 2014</li>
-								<li><i class="fa fa-tag"></i> <a href="/">News</a></li>
-								<li><i class="fa fa-comment"></i> One Comment</li>
-							</ul>
-
-							<p>
-								Description
-								<a href="/" class="service-rm-btn btn btn-primary">
-									Continue reading <i class="fa fa-caret-right"></i></a>
-							</p>
-
-
-						</div>
-					</article>
-
-
-					<article class="row">
-						<div class="col-md-4 col-sm-4">
-							<img src="{% static '/img/blog2.jpg' %}"
-								class="img-responsive center-block img-padder" alt="">
-						</div>
-
-						<div class="col-md-8 col-sm-8">
-							<h4>
-								<a href="/">We’r doctors!</a>
-							</h4>
-							<ul class="list-inline info">
-								<li><i class="fa fa-user-md"></i> Marco Nardi</li>
-								<li><i class="fa fa-calendar"></i> November 20, 2013</li>
-								<li><i class="fa fa-tag"></i> <a href="/">Data</a></li>
-								<li><i class="fa fa-comment"></i> 8 Comments</li>
-							</ul>
-							<p>
-								Description about Doctors
-								<a href="/" class="service-rm-btn btn btn-primary">
-									Continue reading <i class="fa fa-caret-right"></i></a>
-							</p>
-						</div>
-					</article>
-
-
-					<article class="row">
-
-						<div class="col-md-4 col-sm-4">
-							<img src="{% static '/img/blog3.jpg' %}"
-								class="img-responsive center-block img-padder" alt="">
-						</div>
-
-						<div class="col-md-8 col-sm-8">
-							<h4>
-								<a href="/">Breathe mountain air is good for your health?</a>
-							</h4>
-							<ul class="list-inline info">
-								<li><i class="fa fa-user-md"></i> Marco Nardi</li>
-								<li><i class="fa fa-calendar"></i> July 17, 2013</li>
-								<li><i class="fa fa-tag"></i> <a href="#">News</a></li>
-								<li><i class="fa fa-comment"></i> 4 Comments</li>
-							</ul>
-							<p>
-								Description about Breathe mountain air is good for your health?
-								<a href="/" class="service-rm-btn btn btn-primary">
-									Continue reading <i class="fa fa-caret-right"></i></a>
-							</p>
-						</div>
-					</article>
-
-
-					<article class="row">
-
-						<div class="col-md-4 col-sm-4">
-							<img src="{% static '/img/blog4.jpg' %}"
-								class="img-responsive center-block img-padder" alt="">
-						</div>
-
-						<div class="col-md-8 col-sm-8">
-							<h4>
-								<a href="/">Food and shopping in medical real world and its consequence</a>
-							</h4>
-							<ul class="list-inline info">
-								<li><i class="fa fa-user-md"></i> Marco Nardi</li>
-								<li><i class="fa fa-calendar"></i> May 19, 2013</li>
-								<li><i class="fa fa-tag"></i> <a href="/">Lesti</a></li>
-								<li><i class="fa fa-comment"></i> 5 Comments</li>
-							</ul>
-							<p>
-								Description about Food and shopping in medical real world and its consequence
-								<a href="/" class="service-rm-btn btn btn-primary">
-									Continue reading <i class="fa fa-caret-right"></i></a>
-							</p>
-						</div>
-					</article>
-
-
-					<article class="row">
-						<div class="col-md-4 col-sm-4">
-							<img src="{% static '/img/blog5.jpg' %}"
-								class="img-responsive  center-block img-padder" alt="">
-						</div>
-						<div class="col-md-8 col-sm-8">
-							<h4>
-								<a href="/">Caption</a>
-							</h4>
-							<ul class="list-inline info">
-								<li><i class="fa fa-user-md"></i> Marco Nardi</li>
-								<li><i class="fa fa-calendar"></i> May 17, 2013</li>
-								<li><i class="fa fa-tag"></i> <a href="/">News</a></li>
-								<li><i class="fa fa-comment"></i> No Comments</li>
-							</ul>
-							<p>
-								Description
-								<a href="/" class="service-rm-btn btn btn-primary">
-									Continue reading <i class="fa fa-caret-right"></i></a>
-							</p>
-						</div>
-					</article>
-
-
-					<!-- <article class="row">
+  <section class="blog-title text-center">
+    <div class="blog-wrapper">
+      <div class="container">
+        <div class="row">
+          <h1 class="headline">Our Blog</h1>
+        </div>
+        <div class="row">
+          <div class="sub-headline">
+            <p>Full of important information</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="blog-content">
+    <div class="container">
+      <div class="row">
+        <main class="blog1col col-md-9">
+          <div class="archive">
+            <article class="row">
+              <div class="col-md-4 col-sm-4">
+                <img src="{% static '/img/blog1.jpg' %}"
+                     class="img-responsive center-block img-padder"
+                     alt="">
+              </div>
+              <div class="col-md-8 col-sm-8">
+                <h4>
+                  <a href="/">Caption</a>
+                </h4>
+                <ul class="list-inline info">
+                  <li>
+                    <i class="fa fa-user-md"></i> Marco Nardi
+                  </li>
+                  <li>
+                    <i class="fa fa-calendar"></i> March 17, 2014
+                  </li>
+                  <li>
+                    <i class="fa fa-tag"></i> <a href="/">News</a>
+                  </li>
+                  <li>
+                    <i class="fa fa-comment"></i> One Comment
+                  </li>
+                </ul>
+                <p>
+                  Description
+                  <a href="/" class="service-rm-btn btn btn-primary">
+                  Continue reading <i class="fa fa-caret-right"></i></a>
+                </p>
+              </div>
+            </article>
+            <article class="row">
+              <div class="col-md-4 col-sm-4">
+                <img src="{% static '/img/blog2.jpg' %}"
+                     class="img-responsive center-block img-padder"
+                     alt="">
+              </div>
+              <div class="col-md-8 col-sm-8">
+                <h4>
+                  <a href="/">We’r doctors!</a>
+                </h4>
+                <ul class="list-inline info">
+                  <li>
+                    <i class="fa fa-user-md"></i> Marco Nardi
+                  </li>
+                  <li>
+                    <i class="fa fa-calendar"></i> November 20, 2013
+                  </li>
+                  <li>
+                    <i class="fa fa-tag"></i> <a href="/">Data</a>
+                  </li>
+                  <li>
+                    <i class="fa fa-comment"></i> 8 Comments
+                  </li>
+                </ul>
+                <p>
+                  Description about Doctors
+                  <a href="/" class="service-rm-btn btn btn-primary">
+                  Continue reading <i class="fa fa-caret-right"></i></a>
+                </p>
+              </div>
+            </article>
+            <article class="row">
+              <div class="col-md-4 col-sm-4">
+                <img src="{% static '/img/blog3.jpg' %}"
+                     class="img-responsive center-block img-padder"
+                     alt="">
+              </div>
+              <div class="col-md-8 col-sm-8">
+                <h4>
+                  <a href="/">Breathe mountain air is good for your health?</a>
+                </h4>
+                <ul class="list-inline info">
+                  <li>
+                    <i class="fa fa-user-md"></i> Marco Nardi
+                  </li>
+                  <li>
+                    <i class="fa fa-calendar"></i> July 17, 2013
+                  </li>
+                  <li>
+                    <i class="fa fa-tag"></i> <a href="#">News</a>
+                  </li>
+                  <li>
+                    <i class="fa fa-comment"></i> 4 Comments
+                  </li>
+                </ul>
+                <p>
+                  Description about Breathe mountain air is good for your health?
+                  <a href="/" class="service-rm-btn btn btn-primary">
+                  Continue reading <i class="fa fa-caret-right"></i></a>
+                </p>
+              </div>
+            </article>
+            <article class="row">
+              <div class="col-md-4 col-sm-4">
+                <img src="{% static '/img/blog4.jpg' %}"
+                     class="img-responsive center-block img-padder"
+                     alt="">
+              </div>
+              <div class="col-md-8 col-sm-8">
+                <h4>
+                  <a href="/">Food and shopping in medical real world and its consequence</a>
+                </h4>
+                <ul class="list-inline info">
+                  <li>
+                    <i class="fa fa-user-md"></i> Marco Nardi
+                  </li>
+                  <li>
+                    <i class="fa fa-calendar"></i> May 19, 2013
+                  </li>
+                  <li>
+                    <i class="fa fa-tag"></i> <a href="/">Lesti</a>
+                  </li>
+                  <li>
+                    <i class="fa fa-comment"></i> 5 Comments
+                  </li>
+                </ul>
+                <p>
+                  Description about Food and shopping in medical real world and its consequence
+                  <a href="/" class="service-rm-btn btn btn-primary">
+                  Continue reading <i class="fa fa-caret-right"></i></a>
+                </p>
+              </div>
+            </article>
+            <article class="row">
+              <div class="col-md-4 col-sm-4">
+                <img src="{% static '/img/blog5.jpg' %}"
+                     class="img-responsive  center-block img-padder"
+                     alt="">
+              </div>
+              <div class="col-md-8 col-sm-8">
+                <h4>
+                  <a href="/">Caption</a>
+                </h4>
+                <ul class="list-inline info">
+                  <li>
+                    <i class="fa fa-user-md"></i> Marco Nardi
+                  </li>
+                  <li>
+                    <i class="fa fa-calendar"></i> May 17, 2013
+                  </li>
+                  <li>
+                    <i class="fa fa-tag"></i> <a href="/">News</a>
+                  </li>
+                  <li>
+                    <i class="fa fa-comment"></i> No Comments
+                  </li>
+                </ul>
+                <p>
+                  Description
+                  <a href="/" class="service-rm-btn btn btn-primary">
+                  Continue reading <i class="fa fa-caret-right"></i></a>
+                </p>
+              </div>
+            </article>
+            <!-- <article class="row">
 								<div class="col-md-4 col-sm-4">
 									<img src="{% static '/img/blog6.jpg' %}" class="img-responsive center-block img-padder" alt="">
 								</div>
@@ -276,10 +297,8 @@
 											Continue reading <i class="fa fa-caret-right"></i></a>
 									</p>
 								</div>
-							</article> -->
-
-
-					<!-- <div class="row">
+</article> -->
+            <!-- <div class="row">
 				    			<div class="col-md-6 col-md-offset-3 text-center">
 				    				<ul class="pagination">
 										<li class="disabled"><a href="#">&gt;&gt;</a></li>
@@ -291,12 +310,11 @@
 									  	<li><a href="#">&gt;&gt;</a></li>
 									</ul>
 				    			</div>
-				    		</div> -->
-				</div> <!-- end of archive -->
-			</main>
-		</div>
-	</div>
-</section>
-
-
+</div> -->
+          </div>
+          <!-- end of archive -->
+        </main>
+      </div>
+    </div>
+  </section>
 {% endblock %}
